# cpd-analysis-library

./: LICENSE  README.md  pyproject.toml
examples/: proportions_example_2Q.csv  proportions_example_M.csv  run_analysis_example.py
src/cpdlib/: __init__.py  analysis.py  models.py  preprocessing.py
