
# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cpdlib"
version = "0.1.0"
authors = [ { name="Hyunjin Lee", email="hyunjin.lee@kiep.go.kr" } ]
description = "A library for Change Point Detection analysis"
requires-python = ">=3.8"
dependencies = [
    "pandas", "numpy", "matplotlib", "scipy", "seaborn",
]
